--- a/R_framework/TotalP_water.Rmd
+++ b/R_framework/TotalP_water.Rmd
@@ -17,6 +17,7 @@ a) Loading the dependent packages...
 ```{r}
 library(dplyr) #needed for transforming data
 library(ggplot2) #needed for plotting
+library(plotly) #needed for interactive 3D plot
 ```
 
 Packages loaded.
@@ -174,26 +175,23 @@ ggplot(data=subset(Me_P_water, Yr>=2012),
 c) Plotting hypo: epi total P...
 
 ```{r}
-ggplot(data=subset(Me_P_water, Yr>=2012), 
-       aes(x=daynum,y=HE_ratio_TotP_mgL)) + 
-  geom_point(aes(shape=as.factor(Yr)))+
-  labs(title="Hypo: Epi total P ratio, Lake Mendota, WI", #plot title
-       x="Day of Year", #x axis label
-       y="Hypo: Epi Total Phosphorus", #y axis label
-       shape="Year",
-       caption="White highlight indicates CyanoHAB season, mid-Jul to mid-Sep.
-       Red dashed line indicates moving-average regression.") + 
-  ylim(0, max(Me_P_water$HE_ratio_TotP_mgL)) +
-  scale_x_continuous(breaks = seq(0, max(Me_P_water$daynum), #places axis tick marks
-                                  by=30)) + #every 30 days (1 month) - CHANGE AS
-  # NEEDED
-  theme_classic()+
-  #scale_color_continuous(name="Year")+ changed to shape factor from color
-  geom_smooth(col="darkred", lty="dashed") + #adds loess curve (moving average regression model)
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=-Inf, xmax=195, ymin=0, ymax=Inf) +#shadow box highlights CyanoHAB season
-  annotate('rect', fill='gray60', alpha=.2, #creates a shadow box 
-           xmin=255, xmax=Inf, ymin=0, ymax=Inf)  #shadow box highlights CyanoHAB season
+Me_P_ratio <- Me_P_water %>%
+  filter(Yr>= 2012 & Yr<= 2018) %>% #filter for study period
+  select(Yr, daynum, HE_ratio_TotP_mgL) #select only the 
+write.csv(Me_P_ratio, file="Products/Figure10_data.csv")
+fig10<- plot_ly(x=Me_P_ratio$Yr, #creates 3D plot with year as x axis
+               y=Me_P_ratio$daynum, #day of year as y axis
+               z=Me_P_ratio$HE_ratio_TotP_mgL, #P_hypo:P_epi as z axis
+               type="scatter3d", mode="markers", #values as points
+               color=Me_P_ratio$HE_ratio_TotP_mgL) #colors points by value
+fig10<- fig10 %>%
+  layout(scene=list(xaxis=list(title="Year", tickfont=list(size=12)),
+                    yaxis=list(title="Day of Year", tickfont=list(size=12)),
+                    zaxis=list(title="Total P hypo:epi", tickfont=list(size=12))
+                    )
+         )
+
+plotly::export(p=fig10, file="Products/Figure10_color.png")
 ```
 
 # Step 5. Save the new data file:
