--- a/R_framework/Impact_model.Rmd
+++ b/R_framework/Impact_model.Rmd
@@ -46,6 +46,7 @@ cor<- Me_all_interp %>% #select fields with responses, include columns with pred
   na.omit() #remove NAs
 
 M=cor(cor, method="pearson") #perform correlation using Kendall tau method
+write.csv(M, file="Products/Figure16_data.csv") #save figure data as table
 png(height=500, width=500, file="Products/Figure16_color.png", type="cairo")
 corrplot(M, #plot cor matrix
                   diag=FALSE, #remove diagonal that shows corr of vars with themselves
