--- a/R_framework/cyanoHAB_severity.Rmd
+++ b/R_framework/cyanoHAB_severity.Rmd
@@ -17,7 +17,8 @@ a) loading the dependent packages...
 ```{r}
 library(ggplot2) #needed for plots
 library(ggbreak) #needed for plot scale breaks
-library(dplyr) #needed for reshaping/reformaing data
+library(dplyr) #needed for reshaping/reformating data
+library(plotly) #needed for 3D plots
 ```
 
 Packages loaded.
@@ -330,4 +331,97 @@ ggplot(data=Me_phyto,
 
 ```{r}
 write.csv(Me_phyto, file="Cleaned_data/cyanoHAB_severity.csv")
+```
+
+# Supplemental Figures:
+
+## Figure 14. 3D plot of Chl-a across day number and year...
+
+```{r}
+Chl<- read.csv(file="Original_data/ntl38_v5_chl.csv", header=TRUE)
+Me_Chl<- Chl %>%
+  mutate(sampledate=as.Date(sampledate, origin="1899-12-30"), #tells R to format field as Date
+         Chla_ugL= tri_chl_spec, #renames field to common name with units
+         ) %>% 
+  filter(lakeid=="ME", #filter for Lake Mendota data
+         depth_range_m=="0-8", #filter for data from integrated samples 0 to 8m
+         rep=="1") %>% #remove QA analytic replicates
+  filter(!is.na(Chla_ugL)) %>% #removes NAs in chl-a data
+  select(sampledate, Chla_ugL) #selects only fields of interest
+
+date_range<- seq( #creates a vector of sequence data
+  min(Me_Chl$sampledate), #starting at the first sample date
+  max(Me_Chl$sampledate), #ending at the last sample date
+  by="1 day") #observations every day  
+interpolated<- approx( #creates a vector of data that linearly interpolates 
+  Me_Chl$sampledate, #across date
+  Me_Chl$Chla_ugL, #the predicted values of Chl-a
+  xout=date_range) #for every 1 day
+Chla_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #renames the new vector as common field 
+  Chla_ugL=interpolated$y) #renames the new vector as common field with units
+
+Chla_interp<- Chla_interp %>%
+  mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
+         daynum=as.numeric(format(sampledate, "%j")) #adds field with day of yr
+         ) %>%
+  filter(Yr>=2012 & Yr<=2018) #filter for study period
+
+fig14<- plot_ly(x=Chla_interp$Yr, 
+  y=Chla_interp$daynum, 
+  z=Chla_interp$Chla_ugL, 
+  type="scatter3d", mode="markers",
+  color=Chla_interp$Chla_ugL)
+fig14<- fig14 %>%
+  layout(scene=list(xaxis=list(title="Year"),
+         yaxis=list(title="Day of Year"),
+         zaxis=list(title="Chlorophyll-a (ug/L)")))
+fig14
+```
+
+## Figure 15. 3D plot of CD across day number and year...
+
+```{r}
+phyto<-read.csv(file="Original_data/ntl88_v13_phytoplankton.csv", header=TRUE) #has the phytoplankton community dataset
+Me_cyanoRB<- phyto %>%
+  mutate(sampledate=as.Date(sampledate, origin="1899-12-30")) %>% #tells R to format field as Datey
+  filter(lakeid=="ME", #filter for Lake Mendota data
+         depth_range=="0-8m", #filter for data from integrated samples 0 to 8m
+         division=="Cyanophyta") %>% #filter for cyanobacteria data
+  group_by(sampledate) %>% #group all observations by sample date
+  summarize(relbiovol=sum(relative_total_biovolume), #add all observations of cyanobacteria biovolumes together for each sample date
+            CD_cellsmL=sum(cells_per_ml)) %>% #adds all the cyanobacteria cells/mL together for each sample date
+  filter(relbiovol<=100) %>% #remove any invalid records (>100%  not valid entry)   
+  mutate(Yr=as.numeric(format(sampledate, "%Y")), #renames field
+         daynum=as.numeric(format(sampledate, "%j"))) %>% #adds field with day
+  filter(Yr>=2012 & Yr<=2018) #filter for study years
+
+date_range<- seq( #creates a vector of sequence data
+  min(Me_cyanoRB$sampledate), #starting at the first sample date
+  max(Me_cyanoRB$sampledate), #ending at the last sample date
+  by="1 day") #observations every day  
+interpolated<- approx( #creates a vector of data that linearly interpolates 
+  Me_cyanoRB$sampledate, #across date
+  Me_cyanoRB$CD_cellsmL, #the predicted values of Cyanos
+  xout=date_range) #for every 1 day
+CD_interp <- data.frame( #creates a new data frame that has 
+  sampledate = as.Date(interpolated$x), #renames the new vector as common field 
+  CD_cellsmL=interpolated$y) #renames the new vector as common field with units
+
+CD_interp<- CD_interp %>%
+  mutate(Yr=as.numeric(format(sampledate, "%Y")), #adds field with year
+         daynum=as.numeric(format(sampledate, "%j")) #adds field with day of yr
+         ) %>%
+  filter(Yr>=2012 & Yr<=2018) #filter for study period
+
+fig15<- plot_ly(x=CD_interp$Yr, 
+  y=CD_interp$daynum, 
+  z=CD_interp$CD_cellsmL, 
+  type="scatter3d", mode="markers",
+  color=CD_interp$CD_cellsmL)
+fig15<- fig15 %>%
+  layout(scene=list(xaxis=list(title="Year"),
+         yaxis=list(title="Day of Year"),
+         zaxis=list(title="Cyanobacteria Density (cells/mL)")))
+fig15
 ```
