--- a/R_framework/Impact_model.Rmd
+++ b/R_framework/Impact_model.Rmd
@@ -71,8 +71,10 @@ regka_Chla<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
               data=Me_all_interp) #data frame
 summary(regka_Chla)#prints the glm output
 aov(regka_Chla)#prints the sum of squares for the regression and residuals
+png(file="Products/Figure17.png", width=750, height=500) #open png file
 layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
-plot(regka_Chla) #prints diagnostic graphs for regression
+fig17<-plot(regka_Chla) #creates plot
+dev.off() #closes the file
 par(mfrow=c(1,1))
 ```
 
@@ -87,8 +89,10 @@ regkb_Chla<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
               data=Me_all_interp) #data frame
 summary(regkb_Chla)#prints the glm output
 aov(regkb_Chla)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regkb_Chla) #prints diagnostic graphs for regression
+png(file="Products/Figure18.png", width=750, height=500) #open png file
+layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
+fig18<-plot(regkb_Chla) #creates plot
+dev.off() #closes the file
 par(mfrow=c(1,1))
 ```
 
@@ -99,12 +103,14 @@ Model: log10(Chla_t) ~ log10(Chla_t-7) + log10(P_ext,t-k) + log10(P_hypo:P_epiP,
 regkc_Chla<- glm(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                log10(ExtP_kgday_interp_k28) + #P_ext,t-k
-                log10(HE_ratio_interp_k21), #P_hypo:P_epiP,t-k
+                log10(HE_ratio_interp_k28), #P_hypo:P_epiP,t-k
               data=Me_all_interp) #data frame
 summary(regkc_Chla)#prints the glm output
 aov(regkc_Chla)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regkc_Chla) #prints diagnostic graphs for regression
+png(file="Products/Figure19.png", width=750, height=500) #open png file
+layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
+fig19<-plot(regkc_Chla) #creates plot
+dev.off() #closes the file
 par(mfrow=c(1,1))
 ```
 
@@ -118,8 +124,10 @@ regka_CD<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
               data=Me_all_interp) #data frame
 summary(regka_CD)#prints the glm output
 aov(regka_CD)#prints the sum of squares for the regression and residuals
+png(file="Products/Figure20.png", width=750, height=500) #open png file
 layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
-plot(regka_CD) #prints diagnostic graphs for regression
+fig20<-plot(regka_CD) #creates plot
+dev.off() #closes the file
 par(mfrow=c(1,1))
 ```
 
@@ -134,8 +142,10 @@ regkb_CD<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
               data=Me_all_interp) #data frame
 summary(regkb_CD)#prints the glm output
 aov(regkb_CD)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regkb_CD) #prints diagnostic graphs for regression
+png(file="Products/Figure21.png", width=750, height=500) #open png file
+layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
+fig21<-plot(regkb_CD) #creates plot
+dev.off() #closes the file
 par(mfrow=c(1,1))
 ```
 
@@ -150,8 +160,10 @@ regkc_CD<- glm(formula=log10(CD_cellsmL_interp) ~ #CD_t
               data=Me_all_interp) #data frame
 summary(regkc_CD)#prints the glm output
 aov(regkc_CD)#prints the sum of squares for the regression and residuals
-layout(matrix(c(1,2,3,4),2,2)) # optional 4 graphs/page
-plot(regkc_CD) #prints diagnostic graphs for regression
+png(file="Products/Figure22.png", width=750, height=500) #open png file
+layout(matrix(c(1,2,3,4),2,2)) #layout 4 graphs/page
+fig22<-plot(regkc_CD) #creates plot
+dev.off() #closes the file
 par(mfrow=c(1,1))
 ```
 
@@ -167,54 +179,59 @@ YRregk_Chla_2013<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2013)) #subset data by year
-SS_2013<- summary(YRregk_Chla_2013)#prints the sum of squares for the regression 
-impact2013<- data.frame(SS_2013[[1]])[,2,drop=FALSE] #pulls out the SS as table
+Chla_SS_2013<- summary(YRregk_Chla_2013)#prints the sum of squares for the regression 
+Chla_impact2013<- data.frame(Chla_SS_2013[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 YRregk_Chla_2014<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2014)) #subset data by year
-SS_2014<- summary(YRregk_Chla_2014)#prints the sum of squares for the regression 
-impact2014<- data.frame(SS_2014[[1]])[,2,drop=FALSE] #pulls out the SS as table
+Chla_SS_2014<- summary(YRregk_Chla_2014)#prints the sum of squares for the regression 
+Chla_impact2014<- data.frame(Chla_SS_2014[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 YRregk_Chla_2015<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2015)) #subset data by year
-SS_2015<- summary(YRregk_Chla_2015)#prints the sum of squares for the regression 
-impact2015<- data.frame(SS_2015[[1]])[,2,drop=FALSE] #pulls out the SS as table
+Chla_SS_2015<- summary(YRregk_Chla_2015)#prints the sum of squares for the regression 
+Chla_impact2015<- data.frame(Chla_SS_2015[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 YRregk_Chla_2016<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2016)) #subset data by year
-SS_2016<- summary(YRregk_Chla_2016)#prints the sum of squares for the regression 
-impact2016<- data.frame(SS_2016[[1]])[,2,drop=FALSE] #pulls out the SS as table
+Chla_SS_2016<- summary(YRregk_Chla_2016)#prints the sum of squares for the regression 
+Chla_impact2016<- data.frame(Chla_SS_2016[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 YRregk_Chla_2017<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2017)) #subset data by year
-SS_2017<- summary(YRregk_Chla_2017)#prints the sum of squares for the regression 
-impact2017<- data.frame(SS_2017[[1]])[,2,drop=FALSE] #pulls out the SS as table
+Chla_SS_2017<- summary(YRregk_Chla_2017)#prints the sum of squares for the regression 
+Chla_impact2017<- data.frame(Chla_SS_2017[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
 YRregk_Chla_2018<- aov(formula=log10(Chla_ugL_interp) ~ #Chla_t
               log10(Chla_ugL_interp_k7) + #Chla_t-k
                 log10(ExtP_kgday_interp_k28) + #P_ext,t-k
                 IntP_kgday_interp_k28, #P_int,t-k
               data=subset(Me_all_interp, Yr==2018)) #subset data by year
-SS_2018<- summary(YRregk_Chla_2018)#prints the sum of squares for the regression 
-impact2018<- data.frame(SS_2018[[1]])[,2,drop=FALSE] #pulls out the SS as table
+Chla_SS_2018<- summary(YRregk_Chla_2018)#prints the sum of squares for the regression 
+Chla_impact2018<- data.frame(Chla_SS_2018[[1]])[,2,drop=FALSE] #pulls out the SS as table
 
-Model_output_Chla<- cbind(impact2013, impact2014, impact2015, impact2016, 
-                          impact2017, impact2018) #combines all tables together
+Model_output_Chla<- cbind(Chla_impact2013, Chla_impact2014, Chla_impact2015, 
+                          Chla_impact2016, Chla_impact2017, Chla_impact2018) #combines all tables together
+Model_output_Chla$Sum_Sq_part<- c("Seed stock", "External load", "Internal load", "Residual") #add column with predictor name
 colnames(Model_output_Chla)<- c("2013", "2014", "2015", "2016", "2017", "2018")
 # renames columns with year for sum squares
 write.csv(Model_output_Chla, file="Cleaned_data/Impact_model_output_Chla.csv")
+write.csv(Model_output_Chla, file="Products/Figure5_data.csv")
+png(file="Products/Figure5_color.png")
+fig5<-ggplot(data=Model_output_Chla, aes(x=))
+
 ```
 
 Yearly source-attributed impact outputted.
